backend_Ministry_Flow/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: registry.gitlab.com/USERNAME/PROJECT:$CI_COMMIT_SHA
          ports:
            - containerPort: 3000
